@@ -224,8 +224,6 @@ sub AnyEvent::CondVar::Base::_wait {
    $LOOP->loop_once until exists $_[0]{_ae_sent};
 }
 
-1;
-
 =head1 SEE ALSO
 
 L<AnyEvent>, L<IO::Async>.
@@ -239,4 +237,6 @@ L<AnyEvent>, L<IO::Async>.
  Rewrote the backend for IO::Async version 0.33.
 
 =cut
+
+1
 
