@@ -11,6 +11,8 @@ TODO: AnyEvent::IO
         - made log messages genearted by AnyEvent submodules not
           include the package name anymore, as it will be logged
           by default already.
+        - upgrade to the trick used by common-sense 3.5 to work
+          around extra warning torture/breakage under perl 5.15.x.
 
 6.14 Tue Jan 31 20:00:24 CET 2012
 	- AnyEvent::Impl::Tk was broken due to a mysterious "die" inside,
